[package]
name = "jupiter-swap-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
reqwest = { version = "0.12.11", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_qs = "0.13.0"
solana-account-decoder = "2.1.7"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
thiserror = "2.0.9"
